fixed the post wrapping again

--- a/style/layout.styl
+++ b/style/layout.styl
@@ -558,7 +558,7 @@ a.blue
 	position relative
 
 	a
-		margin-right 28px
+		width 100%
 		display inline-block
 		
 	.byline
